--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+
+<body>
+  <h1>Darris Hawks</h1>
+  <p>Working on becoming a full-stack developer</p>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+</body>
+
+</html>
